Index template cleanup and synchronization.

--- a/app/index371.html
+++ b/app/index371.html
@@ -5,6 +5,7 @@
         <meta charset=utf-8>
         <meta name=viewport content="width=device-width, initial-scale=1.0">
         <title>College Skills 371 | General Arithmetic | Santa Rosa Junior College</title>
+        <link href=//fonts.googleapis.com/css?family=Muli:300,400 rel='stylesheet' type='text/css'>
         <link rel=stylesheet href=css/bootstrap.min.css>
         <link rel=stylesheet href=css/app.css>
     </head>
@@ -93,6 +94,7 @@
         <script src=data371/data22_3.js></script>
         <script src=data371/data22_4.js></script>
         <script src=js/services/course-data.js></script>
+        <script src=js/services/data-utils.js></script>
         <script src=js/services/feedback-data.js></script>
         <script src=js/services/directive-utils.js></script>
         <script src=js/services/expression.js></script>
@@ -109,6 +111,7 @@
         <script src=js/directives/ms-breadcrumbs.js></script>
         <script src=js/directives/ms-build-equivalent-fraction.js></script>
         <script src=js/directives/ms-button-group.js></script>
+        <script src=js/directives/ms-cancel-fractions.js></script>
         <script src=js/directives/ms-checkbox.js></script>
         <script src=js/directives/ms-checkboxlabel.js></script>
         <script src=js/directives/ms-choose.js></script>
