--- a/app/index372.html
+++ b/app/index372.html
@@ -5,6 +5,7 @@
         <meta charset=utf-8>
         <meta name=viewport content="width=device-width, initial-scale=1.0">
         <title>College Skills 372 | Pre Algebra | Santa Rosa Junior College</title>
+        <link href=//fonts.googleapis.com/css?family=Muli:300,400 rel='stylesheet' type='text/css'>
         <link rel=stylesheet href=css/bootstrap.min.css>
         <link rel=stylesheet href=css/app.css>
     </head>
