more 372 menu items

--- a/app/index372.html
+++ b/app/index372.html
@@ -33,11 +33,21 @@
         <script src=data372/data_b_1.js></script>
         <script src=data372/data_c_1.js></script>
         <script src=data372/data_c_2.js></script>
-        <script src=data372/data_c_1.js></script>
+        <script src=data372/data_d_1.js></script>
         <script src=data372/data_e_1.js></script>
         <script src=data372/data_e_2.js></script>
         <script src=data372/data_e_3.js></script>
         <script src=data372/data_e_4.js></script>
+        <script src=data372/data_f_1.js></script>
+        <script src=data372/data_g_1.js></script>
+        <script src=data372/data_g_2.js></script>
+        <script src=data372/data_g_3.js></script>
+        <script src=data372/data_h_1.js></script>
+        <script src=data372/data_h_2.js></script>
+        <script src=data372/data_h_3.js></script>
+        <script src=data372/data_i_1.js></script>
+        <script src=data372/data_i_2.js></script>
+        <script src=data372/data_i_3.js></script>
         <script src=data372/data_j_1.js></script>
         <script src=data372/data_o_1_1.js></script>
         <script src=data372/data_s_1.js></script>
