--- a/app/index372.html
+++ b/app/index372.html
@@ -75,6 +75,7 @@
         <script src=js/directives/ms-commas-number.js></script>
         <script src=js/directives/ms-css.js></script>
         <script src=js/directives/ms-col.js></script>
+        <script src=js/directives/ms-cut.js></script>
         <script src=js/directives/ms-comparewholesgraph.js></script>
         <script src=js/directives/ms-percent-arrows.js></script>
         <script src=js/directives/ms-div-wholes.js></script>
