completed unit 2 menu

--- a/app/index372.html
+++ b/app/index372.html
@@ -49,6 +49,15 @@
         <script src=data372/data_i_2.js></script>
         <script src=data372/data_i_3.js></script>
         <script src=data372/data_j_1.js></script>
+        <script src=data372/data_k_1.js></script>
+        <script src=data372/data_k_2.js></script>
+        <script src=data372/data_k_3.js></script>
+        <script src=data372/data_l_1.js></script>
+        <script src=data372/data_l_2.js></script>
+        <script src=data372/data_m_1.js></script>
+        <script src=data372/data_m_2.js></script>
+        <script src=data372/data_m_3.js></script>
+        <script src=data372/data_n_1.js></script>
         <script src=data372/data_o_1_1.js></script>
         <script src=data372/data_s_1.js></script>
         <script src=data372/data_w_1.js></script>
