added menu items for 372 unit 3

--- a/app/index372.html
+++ b/app/index372.html
@@ -59,6 +59,11 @@
         <script src=data372/data_m_3.js></script>
         <script src=data372/data_n_1.js></script>
         <script src=data372/data_o_1_1.js></script>
+        <script src=data372/data_o_2_1.js></script>
+        <script src=data372/data_o_2_2.js></script>
+        <script src=data372/data_p_1.js></script>
+        <script src=data372/data_r_1.js></script>
+        <script src=data372/data_q_1.js></script>
         <script src=data372/data_s_1.js></script>
         <script src=data372/data_w_1.js></script>
         <script src=js/services/course-data2.js></script>
