added unit 4 to 372 menu

--- a/app/index372.html
+++ b/app/index372.html
@@ -65,6 +65,14 @@
         <script src=data372/data_r_1.js></script>
         <script src=data372/data_q_1.js></script>
         <script src=data372/data_s_1.js></script>
+        <script src=data372/data_s_2.js></script>
+        <script src=data372/data_s_3.js></script>
+        <script src=data372/data_s_4.js></script>
+        <script src=data372/data_s_5.js></script>
+        <script src=data372/data_s_6.js></script>
+        <script src=data372/data_t_1.js></script>
+        <script src=data372/data_u_1.js></script>
+        <script src=data372/data_v_1.js></script>
         <script src=data372/data_w_1.js></script>
         <script src=js/services/course-data2.js></script>
         <script src=js/services/feedback-data.js></script>
