added menu items for 372 unit 5

--- a/app/index372.html
+++ b/app/index372.html
@@ -74,6 +74,18 @@
         <script src=data372/data_u_1.js></script>
         <script src=data372/data_v_1.js></script>
         <script src=data372/data_w_1.js></script>
+        <script src=data372/data_w_2.js></script>
+        <script src=data372/data_x_1.js></script>
+        <script src=data372/data_y_1.js></script>
+        <script src=data372/data_y_2.js></script>
+        <script src=data372/data_z_1.js></script>
+        <script src=data372/data_aa_1.js></script>
+        <script src=data372/data_aa_2.js></script>
+        <script src=data372/data_bb_1.js></script>
+        <script src=data372/data_cc_1.js></script>
+        <script src=data372/data_dd_1.js></script>
+        <script src=data372/data_dd_2.js></script>
+        <script src=data372/data_ee_1.js></script>
         <script src=js/services/course-data2.js></script>
         <script src=js/services/feedback-data.js></script>
         <script src=js/services/directive-utils.js></script>
