first 2 problems 21.1, 21.2, 21.3, 21.4, 22.3, and 17.2

--- a/app/index371.html
+++ b/app/index371.html
@@ -74,6 +74,7 @@
         <script src=data371/data15_2.js></script>
         <script src=data371/data16_1.js></script>
         <script src=data371/data16_4.js></script>
+        <script src=data371/data17_2.js></script>
         <script src=data371/data18_1.js></script>
         <script src=data371/data18_2.js></script>
         <script src=data371/data18_3.js></script>
@@ -83,6 +84,12 @@
         <script src=data371/data19_4.js></script>
         <script src=data371/data20_2.js></script>
         <script src=data371/data20_3.js></script>
+        <script src=data371/data21_1.js></script>
+        <script src=data371/data21_2.js></script>
+        <script src=data371/data21_3.js></script>
+        <script src=data371/data21_4.js></script>
+        <script src=data371/data22_3.js></script>
+        <script src=data371/data22_4.js></script>
         <script src=js/services/course-data.js></script>
         <script src=js/services/feedback-data.js></script>
         <script src=js/services/directive-utils.js></script>
