--- a/app/index371.html
+++ b/app/index371.html
@@ -73,6 +73,7 @@
         <script src=data371/data15_1.js></script>
         <script src=data371/data15_2.js></script>
         <script src=data371/data16_1.js></script>
+        <script src=data371/data16_2.js></script>
         <script src=data371/data16_4.js></script>
         <script src=data371/data17_2.js></script>
         <script src=data371/data18_1.js></script>
