Add changeSigns filter to change * and / to arithmetic symbols.
This fixes the layout problems on 4.2

--- a/app/index371.html
+++ b/app/index371.html
@@ -177,6 +177,7 @@
         <script src=js/filters/subtract-decimals.js></script>
         <script src=js/filters/multiply-decimals.js></script>
         <script src=js/filters/percent-conversion.js></script>
+        <script src=js/filters/change-signs.js></script>
         <script src=js/filters/checkbox2lbl.js></script>
         <script src=js/filters/commas.js></script>
  		<script src=js/filters/decimal-to-display-array.js></script>
