--- a/app/index372.html
+++ b/app/index372.html
@@ -163,6 +163,7 @@
         <script src=js/directives/ms-reduce-fraction.js></script>
         <script src=js/directives/ms-strip-commas.js></script>
         <script src=js/directives/ms-wb.js></script>
+        <script src=js/directives/ms-whole-part.js></script>
         <script src=js/filters/add-wholes.js></script>
         <script src=js/filters/subtract-wholes.js></script>
         <script src=js/filters/multiply-wholes.js></script>
