--- a/app/index372.html
+++ b/app/index372.html
@@ -117,6 +117,16 @@
         <script src=js/directives/ms-div-wholes.js></script>  
         <script src=js/directives/ms-equivalent.js></script>
         <script src=js/directives/ms-event-label.js></script>
+        <script src=js/directives/ms-data.js></script>
+        <script src=js/directives/ms-group.js></script>
+        <script src=js/directives/ms-html.js></script>
+        <script src=js/directives/ms-multiply-decimals-power-ten.js></script>
+        <script src=js/directives/ms-problem-pager.js></script>
+        <script src=js/directives/ms-problem.js></script>
+        <script src=js/directives/ms-panel-group.js></script>
+        <script src=js/directives/ms-panel.js></script>
+        <script src=js/directives/ms-help-prompt.js></script>
+        <script src=js/directives/ms-long-division.js></script>
         <script src=js/directives/ms-exponent.js></script>
         <script src=js/directives/ms-expression.js></script>
         <script src=js/directives/ms-feedback.js></script>
