start 22.1 "Solving Simple Interest and Monthly Payment Problems"

--- a/app/index371.html
+++ b/app/index371.html
@@ -93,6 +93,7 @@
         <script src=data371/data21_2.js></script>
         <script src=data371/data21_3.js></script>
         <script src=data371/data21_4.js></script>
+        <script src=data371/data22_1.js></script>
         <script src=data371/data22_3.js></script>
         <script src=data371/data22_4.js></script>
         <script src=js/controllers/feedback.js></script>
