--- a/app/index371.html
+++ b/app/index371.html
@@ -52,6 +52,7 @@
         <script src=data371/data7_1.js></script>
         <script src=data371/data7_2.js></script>
         <script src=data371/data7_3.js></script>
+        <script src=data371/data7_4.js></script>
         <script src=data371/data8_1.js></script>
         <script src=data371/data8_2.js></script>
         <script src=data371/data8_3.js></script>
