Rearranged and commented index files

--- a/app/index372.html
+++ b/app/index372.html
@@ -87,6 +87,7 @@
         <script src=data372/data_dd_2.js></script>
         <script src=data372/data_ee_1.js></script>
         <script src=js/services/course-data2.js></script>
+       <!-- if you add a service or directive, include it in the index371 file as well-->
         <script src=js/services/data-utils.js></script>
         <script src=js/services/feedback-data.js></script>
         <script src=js/services/directive-utils.js></script>
