--- a/app/index371.html
+++ b/app/index371.html
@@ -96,6 +96,8 @@
         <script src=data371/data22_1.js></script>
         <script src=data371/data22_3.js></script>
         <script src=data371/data22_4.js></script>
+         <script src=js/services/course-data.js></script>
+         <!-- if you add a service or directive below, include it in the index372 file as well-->
         <script src=js/controllers/feedback.js></script>
         <script src=js/controllers/home.js></script>
         <script src=js/controllers/problem.js></script>
@@ -180,7 +182,6 @@
         <script src=js/filters/subtract-decimals.js></script>
         <script src=js/filters/subtract-wholes.js></script>
         <script src=js/filters/wrap.js></script>
-        <script src=js/services/course-data.js></script>
         <script src=js/services/data-utils.js></script>
         <script src=js/services/directive-utils.js></script>
         <script src=js/services/expression.js></script>
