--- a/app/index371.html
+++ b/app/index371.html
@@ -94,6 +94,7 @@
         <script src=data371/data21_3.js></script>
         <script src=data371/data21_4.js></script>
         <script src=data371/data22_1.js></script>
+        <script src=data371/data22_2.js></script>
         <script src=data371/data22_3.js></script>
         <script src=data371/data22_4.js></script>
          <script src=js/services/course-data.js></script>
