start 23.2 Converting Units of Volume (using ms-image.js directive)

--- a/app/index371.html
+++ b/app/index371.html
@@ -97,6 +97,7 @@
         <script src=data371/data22_2.js></script>
         <script src=data371/data22_3.js></script>
         <script src=data371/data22_4.js></script>
+        <script src=data371/data23_2.js></script>
          <script src=js/services/course-data.js></script>
          <!-- if you add a service or directive below, include it in the index372 file as well-->
         <script src=js/controllers/feedback.js></script>
@@ -137,6 +138,7 @@
         <script src=js/directives/ms-group.js></script>
         <script src=js/directives/ms-help-prompt.js></script>
         <script src=js/directives/ms-html.js></script>
+        <script src=js/directives/ms-image.js></script>
         <script src=js/directives/ms-input.js></script>
         <script src=js/directives/ms-instruction.js></script>
         <script src=js/directives/ms-long-division.js></script>
