--- a/app/index371.html
+++ b/app/index371.html
@@ -64,6 +64,7 @@
         <script src=data371/data10_2.js></script>
         <script src=data371/data10_3.js></script>
 		<script src=data371/data10_4.js></script>
+        <script src=data371/data11_1.js></script>
         <script src=data371/data12_1.js></script>
         <script src=data371/data12_2.js></script>
         <script src=data371/data12_3.js></script>
@@ -148,6 +149,7 @@
         <script src=js/directives/ms-multiply-fractions.js></script>
         <script src=js/directives/ms-multiply-wholes.js></script>
         <script src=js/directives/ms-order-operations.js></script>
+        <script src=js/directives/ms-order-operations-simple.js></script>
         <script src=js/directives/ms-panel.js></script>
         <script src=js/directives/ms-panel-group.js></script>
         <script src=js/directives/ms-percent-arrows.js></script>
