--- a/app/index372.html
+++ b/app/index372.html
@@ -136,6 +136,7 @@
         <script src=js/directives/ms-multiply-fractions.js></script>
         <script src=js/directives/ms-multiply-wholes.js></script>
         <script src=js/directives/ms-order-operations.js></script>
+        <script src=js/directives/ms-order-operations-simple.js></script>
         <script src=js/directives/ms-panel.js></script>
         <script src=js/directives/ms-panel-group.js></script>
         <script src=js/directives/ms-percent-arrows.js></script>
