--- a/app/index371.html
+++ b/app/index371.html
@@ -128,6 +128,7 @@
         <script src=js/directives/ms-cut.js></script>
         <script src=js/directives/ms-data-set.js></script>
         <script src=js/directives/ms-div-wholes.js></script>
+        <script src=js/directives/ms-equivalent.js></script>
         <script src=js/directives/ms-event-label.js></script>
         <script src=js/directives/ms-exponent.js></script>
         <script src=js/directives/ms-expression.js></script>
