--- a/app/index371.html
+++ b/app/index371.html
@@ -120,6 +120,7 @@
         <script src=js/directives/ms-chart.js></script>
         <script src=js/directives/ms-checkbox.js></script>
         <script src=js/directives/ms-checkboxlabel.js></script>
+        <script src=js/directives/ms-chkbtn.js></script>
         <script src=js/directives/ms-choose.js></script>
         <script src=js/directives/ms-col.js></script>
         <script src=js/directives/ms-commas-number.js></script>
