for Mark ms-pan adjusts panel size \pan{number of spans for problem}{number of spans for answer}{put your ms-code here}{optional class} example: \pan{5}{7}{\input{}} (numbers must add up to 12- no less then 1)

--- a/app/index371.html
+++ b/app/index371.html
@@ -155,6 +155,7 @@
         <script src=js/directives/ms-multiply-wholes.js></script>
         <script src=js/directives/ms-order-operations.js></script>
         <script src=js/directives/ms-order-operations-simple.js></script>
+        <script src=js/directives/ms-pan.js></script>
         <script src=js/directives/ms-panel.js></script>
         <script src=js/directives/ms-panel-group.js></script>
         <script src=js/directives/ms-percent-arrows.js></script>
