--- a/app/index372.html
+++ b/app/index372.html
@@ -123,6 +123,7 @@
         <script src=js/directives/ms-multiply-decimals-power-ten.js></script>
         <script src=js/directives/ms-problem-pager.js></script>
         <script src=js/directives/ms-problem.js></script>
+        <script src=js/directives/ms-pan.js></script>
         <script src=js/directives/ms-panel-group.js></script>
         <script src=js/directives/ms-panel.js></script>
         <script src=js/directives/ms-help-prompt.js></script>
