new ms-size resize input and select when wrapped

--- a/app/index372.html
+++ b/app/index372.html
@@ -157,6 +157,7 @@
         <script src=js/directives/ms-showplace.js></script>
         <script src=js/directives/ms-showplacedecimal.js></script>
         <script src=js/directives/ms-sign.js></script>
+        <script src=js/directives/ms-size.js></script>
         <script src=js/directives/ms-string.js></script>
         <script src=js/directives/ms-strip-commas.js></script>
         <script src=js/directives/ms-subtract-decimals.js></script>
