--- a/app/index371.html
+++ b/app/index371.html
@@ -75,6 +75,7 @@
         <script src=data371/data14_2.js></script>
         <script src=data371/data15_1.js></script>
         <script src=data371/data15_2.js></script>
+        <script src=data371/data15_3.js></script>
         <script src=data371/data16_1.js></script>
         <script src=data371/data16_2.js></script>
         <script src=data371/data16_3.js></script>
@@ -131,6 +132,7 @@
         <script src=js/directives/ms-cut.js></script>
         <script src=js/directives/ms-data-set.js></script>
         <script src=js/directives/ms-div-wholes.js></script>
+        <script src=js/directives/ms-divide-decimals-power-ten.js></script>
         <script src=js/directives/ms-equivalent.js></script>
         <script src=js/directives/ms-event-label.js></script>
         <script src=js/directives/ms-exponent.js></script>
@@ -187,6 +189,7 @@
         <script src=js/filters/commas.js></script>
         <script src=js/filters/decimal-to-display-array.js></script>
         <script src=js/filters/digits.js></script>
+        <script src=js/filters/divide-decimals.js></script>
         <script src=js/filters/hide-last.js></script>
         <script src=js/filters/multiply-decimals.js></script>
         <script src=js/filters/multiply-wholes.js></script>
