--- a/app/index372.html
+++ b/app/index372.html
@@ -117,6 +117,7 @@
         <script src=js/directives/ms-cut.js></script>
         <script src=js/directives/ms-data-set.js></script>
         <script src=js/directives/ms-div-wholes.js></script>
+        <script src=js/directives/ms-divide-decimals-power-ten.js></script>
         <script src=js/directives/ms-equivalent.js></script>
         <script src=js/directives/ms-event-label.js></script>
         <script src=js/directives/ms-exponent.js></script>
@@ -173,6 +174,7 @@
         <script src=js/filters/commas.js></script>
         <script src=js/filters/decimal-to-display-array.js></script>
         <script src=js/filters/digits.js></script>
+        <script src=js/filters/divide-decimals.js></script>
         <script src=js/filters/hide-last.js></script>
         <script src=js/filters/multiply-decimals.js></script>
         <script src=js/filters/multiply-wholes.js></script>
