per Matt, answer $54 or answer $54.00 should both be valid- added tag inputcash, data answer must include ".00" but user answer can be either alternative

--- a/app/index371.html
+++ b/app/index371.html
@@ -108,6 +108,7 @@
         <script src=js/controllers/problem-set-list.js></script>
         <script src=js/controllers/unit-list.js></script>
         <script src=js/directives/ms-add-decimals.js></script>
+        <script src=js/directives/ms-add-cash-zeros.js></script>
         <script src=js/directives/ms-add-wholes.js></script>
         <script src=js/directives/ms-add-zero.js></script>
         <script src=js/directives/ms-breadcrumbs.js></script>
@@ -146,6 +147,7 @@
         <script src=js/directives/ms-html.js></script>
         <script src=js/directives/ms-image.js></script>
         <script src=js/directives/ms-input.js></script>
+        <script src=js/directives/ms-input-cash.js></script>
         <script src=js/directives/ms-instruction.js></script>
         <script src=js/directives/ms-long-division.js></script>
         <script src=js/directives/ms-mixed-number.js></script>
