cancel fraction widget ---- version 1

--- a/app/index372.html
+++ b/app/index372.html
@@ -103,6 +103,9 @@
         <script src=js/directives/ms-btn-grp.js></script>
         <script src=js/directives/ms-button.js></script>
         <script src=js/directives/ms-button-group.js></script>
+        <script src=js/directives/ms-cancel-btn.js></script>
+        <script src=js/directives/ms-cancel-element.js></script>
+        <script src=js/directives/ms-cancel-fracs.js></script>
         <script src=js/directives/ms-cancel-fractions.js></script>
         <script src=js/directives/ms-chart.js></script>
         <script src=js/directives/ms-checkbox.js></script>
