start decimal division 15.2

--- a/app/index371.html
+++ b/app/index371.html
@@ -155,6 +155,7 @@
         <script src=js/directives/ms-input-cash.js></script>
         <script src=js/directives/ms-instruction.js></script>
         <script src=js/directives/ms-long-division.js></script>
+        <script src=js/directives/ms-long-division-decimal.js></script>
         <script src=js/directives/ms-mixed-number.js></script>
         <script src=js/directives/ms-multiply-decimals.js></script>
         <script src=js/directives/ms-multiply-decimals-power-ten.js></script>
@@ -198,6 +199,7 @@
         <script src=js/filters/multiply-wholes.js></script>
         <script src=js/filters/percent-conversion.js></script>
         <script src=js/filters/replace.js></script>
+        <script src=js/filters/stylecharacter.js></script>
         <script src=js/filters/subtract-decimals.js></script>
         <script src=js/filters/subtract-wholes.js></script>
         <script src=js/filters/wrap.js></script>
