--- a/app/index372.html
+++ b/app/index372.html
@@ -169,6 +169,7 @@
         <script src=js/directives/ms-strip-commas.js></script>
         <script src=js/directives/ms-subtract-decimals.js></script>
         <script src=js/directives/ms-subtract-wholes.js></script>
+        <script src=js/directives/ms-to-lowercase.js></script>
         <script src=js/directives/ms-wb.js></script>
         <script src=js/directives/ms-whole-part.js></script>
         <script src=js/filters/add-decimals.js></script>
