k.1 evaluate signed numbers, problems 1-12 and problem 15 currently appearing as 13.

--- a/app/index371.html
+++ b/app/index371.html
@@ -173,6 +173,7 @@
         <script src=js/directives/ms-problem.js></script>
         <script src=js/directives/ms-problem-pager.js></script>
         <script src=js/directives/ms-reduce-fraction.js></script>
+        <script src=js/directives/ms-remove-plus.js></script>
         <script src=js/directives/ms-row.js></script>
         <script src=js/directives/ms-row-group.js></script>
         <script src=js/directives/ms-select.js></script>
