--- a/app/index371.html
+++ b/app/index371.html
@@ -57,6 +57,7 @@
         <script src=data371/data8_2.js></script>
         <script src=data371/data8_3.js></script>
         <script src=data371/data8_4.js></script>
+        <script src=data371/data8_5.js></script>
         <script src=data371/data9_1.js></script>
         <script src=data371/data9_2.js></script>
         <script src=data371/data9_3.js></script>
