add filters/subtract-wholes.js to index371.html, it's in index372.html so just matching

--- a/app/index371.html
+++ b/app/index371.html
@@ -203,6 +203,7 @@
         <script src=js/filters/replace.js></script>
         <script src=js/filters/stylecharacter.js></script>
         <script src=js/filters/subtract-decimals.js></script>
+        <script src=js/filters/subtract-wholes.js></script>
         <script src=js/filters/wrap.js></script>
         <script src=js/services/data-utils.js></script>
         <script src=js/services/directive-utils.js></script>
