--- a/app/index372.html
+++ b/app/index372.html
@@ -22,7 +22,7 @@
             <ms-breadcrumbs></ms-breadcrumbs>
             <div ng-view></div>
         </div>
-        <script src=lib/jquery/jquery.1.9.1.min.js></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src=lib/angular/angular.js></script>
         <script src=lib/bootstrap/bootstrap.min.js></script>
         <script src=lib/flot/jquery.flot.js></script>
