--- a/app/index372.html
+++ b/app/index372.html
@@ -20,6 +20,7 @@
         </header>
         <div class=container>
             <ms-breadcrumbs></ms-breadcrumbs>
+            <ms-modal></ms-modal>
             <div ng-view></div>
         </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
@@ -142,6 +143,7 @@
         <script src=js/directives/ms-long-division.js></script>
         <script src=js/directives/ms-long-division-decimal.js></script>
         <script src=js/directives/ms-mixed-number.js></script>
+        <script src=js/directives/ms-modal.js></script>
         <script src=js/directives/ms-multiply-decimals.js></script>
         <script src=js/directives/ms-multiply-decimals-power-ten.js></script>
         <script src=js/directives/ms-multiply-fractions.js></script>
