--- a/app/index372.html
+++ b/app/index372.html
@@ -4,7 +4,7 @@
         <!--This is the index page for the College Skills 372 Application -->
         <meta charset=utf-8>
         <meta name=viewport content="width=device-width, initial-scale=1.0">
-        <title>College Skills 372 | Pre Algebra | Santa Rosa Junior College</title>
+        <title>College Skills 372 | Prealgebra | Santa Rosa Junior College</title>
         <link href=//fonts.googleapis.com/css?family=Muli:300,400 rel='stylesheet' type='text/css'>
         <link rel=stylesheet href=css/bootstrap.min.css>
         <link rel=stylesheet href=css/app.css>
