loader working with googleapis for latest angular and jquery

--- a/app/index371.html
+++ b/app/index371.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang=en ng-app=mathSkills>
+<html lang=en>
     <head>
         <!--This is the index page for the College Skills 371 Application -->
         <meta charset=utf-8>
@@ -8,6 +8,231 @@
         <link href=//fonts.googleapis.com/css?family=Muli:300,400 rel='stylesheet' type='text/css'>
         <link rel=stylesheet href=css/bootstrap.min.css>
         <link rel=stylesheet href=css/app.css>
+        
+<script>
+    
+/*
+ AngularJS v1.2.11
+ (c) 2010-2014 Google, Inc. http://angularjs.org
+ License: MIT
+*/
+(function(){'use strict';function d(a){return function(){var c=arguments[0],b,c="["+(a?a+":":"")+c+"] http://errors.angularjs.org/1.2.11/"+(a?a+"/":"")+c;for(b=1;b<arguments.length;b++)c=c+(1==b?"?":"&")+"p"+(b-1)+"="+encodeURIComponent("function"==typeof arguments[b]?arguments[b].toString().replace(/ \{[\s\S]*$/,""):"undefined"==typeof arguments[b]?"undefined":"string"!=typeof arguments[b]?JSON.stringify(arguments[b]):arguments[b]);return Error(c)}}(function(a){var c=d("$injector"),b=d("ng");a=a.angular||
+(a.angular={});a.$$minErr=a.$$minErr||d;return a.module||(a.module=function(){var a={};return function(e,d,f){if("hasOwnProperty"===e)throw b("badname","module");d&&a.hasOwnProperty(e)&&(a[e]=null);return a[e]||(a[e]=function(){function a(c,d,e){return function(){b[e||"push"]([c,d,arguments]);return g}}if(!d)throw c("nomod",e);var b=[],h=[],k=a("$injector","invoke"),g={_invokeQueue:b,_runBlocks:h,requires:d,name:e,provider:a("$provide","provider"),factory:a("$provide","factory"),service:a("$provide",
+"service"),value:a("$provide","value"),constant:a("$provide","constant","unshift"),animation:a("$animateProvider","register"),filter:a("$filterProvider","register"),controller:a("$controllerProvider","register"),directive:a("$compileProvider","directive"),config:k,run:function(a){h.push(a);return this}};f&&k(f);return g}())}}())})(window)})(window);
+//# sourceMappingURL=angular-loader.min.js.map
+
+    // include a third-party async loader library
+    /*!
+     * $script.js v1.3
+     * https://github.com/ded/script.js
+     * Copyright: @ded & @fat - Dustin Diaz, Jacob Thornton 2011
+     * Follow our software http://twitter.com/dedfat
+     * License: MIT
+     */
+    !function(a,b,c){function t(a,c){var e=b.createElement("script"),f=j;e.onload=e.onerror=e[o]=function(){e[m]&&!/^c|loade/.test(e[m])||f||(e.onload=e[o]=null,f=1,c())},e.async=1,e.src=a,d.insertBefore(e,d.firstChild)}function q(a,b){p(a,function(a){return!b(a)})}var d=b.getElementsByTagName("head")[0],e={},f={},g={},h={},i="string",j=!1,k="push",l="DOMContentLoaded",m="readyState",n="addEventListener",o="onreadystatechange",p=function(a,b){for(var c=0,d=a.length;c<d;++c)if(!b(a[c]))return j;return 1};!b[m]&&b[n]&&(b[n](l,function r(){b.removeEventListener(l,r,j),b[m]="complete"},j),b[m]="loading");var s=function(a,b,d){function o(){if(!--m){e[l]=1,j&&j();for(var a in g)p(a.split("|"),n)&&!q(g[a],n)&&(g[a]=[])}}function n(a){return a.call?a():e[a]}a=a[k]?a:[a];var i=b&&b.call,j=i?b:d,l=i?a.join(""):b,m=a.length;c(function(){q(a,function(a){h[a]?(l&&(f[l]=1),o()):(h[a]=1,l&&(f[l]=1),t(s.path?s.path+a+".js":a,o))})},0);return s};s.get=t,s.ready=function(a,b,c){a=a[k]?a:[a];var d=[];!q(a,function(a){e[a]||d[k](a)})&&p(a,function(a){return e[a]})?b():!function(a){g[a]=g[a]||[],g[a][k](b),c&&c(d)}(a.join("|"));return s};var u=a.$script;s.noConflict=function(){a.$script=u;return this},typeof module!="undefined"&&module.exports?module.exports=s:a.$script=s}(this,document,setTimeout)
+
+    // load all of the dependencies asynchronously.
+        //if you add a service or directive below, include it in the index372 file as well
+        $script([
+            //'lib/angular/angular.js',
+            //'lib/jquery/jquery.1.11.0.min.js',
+			'//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js',
+        	'//ajax.googleapis.com/ajax/libs/angularjs/1.2.12/angular.min.js',
+            'lib/bootstrap/bootstrap.min.js',
+            'lib/flot/jquery.flot.js',
+            'lib/flot/jquery.flot.categories.js',
+            'js/mathSkills.js',
+            'js/services/mathSkills.services.js',
+            'data371/data1_1.js',
+            'data371/data1_2.js',
+            'data371/data1_3.js',
+            'data371/data1_4.js',
+            'data371/data1_5.js',
+            'data371/data2_1.js',
+            'data371/data2A_1.js',
+            'data371/data2A_2.js',
+            'data371/data3_1.js',
+            'data371/data3_2.js',
+            'data371/data4_1.js',
+            'data371/data4_2.js',
+            'data371/data5_1.js',
+            'data371/data5_2.js',
+            'data371/data5_3.js',
+            'data371/data5_4.js',
+            'data371/data6_1.js',
+            'data371/data6_2.js',
+            'data371/data6_3.js',
+            'data371/data6_4.js',
+            'data371/data7_1.js',
+            'data371/data7_2.js',
+            'data371/data7_3.js',
+            'data371/data7_4.js',
+            'data371/data8_1.js',
+            'data371/data8_2.js',
+            'data371/data8_3.js',
+            'data371/data8_4.js',
+            'data371/data8_5.js',
+            'data371/data9_1.js',
+            'data371/data9_2.js',
+            'data371/data9_3.js',
+            'data371/data10_1.js',
+            'data371/data10_2.js',
+            'data371/data10_3.js',
+            'data371/data10_4.js',
+            'data371/data11_1.js',
+            'data371/data12_1.js',
+            'data371/data12_2.js',
+            'data371/data12_3.js',
+            'data371/data13_1.js',
+            'data371/data13_2.js',
+            'data371/data14_1.js',
+            'data371/data14_2.js',
+            'data371/data15_1.js',
+            'data371/data15_2.js',
+            'data371/data15_3.js',
+            'data371/data16_1.js',
+            'data371/data16_2.js',
+            'data371/data16_3.js',
+            'data371/data16_4.js',
+            'data371/data17_1.js',
+            'data371/data17_2.js',
+            'data371/data18_1.js',
+            'data371/data18_2.js',
+            'data371/data18_3.js',
+            'data371/data19_1.js',
+            'data371/data19_2.js',
+            'data371/data19_3.js',
+            'data371/data19_4.js',
+            'data371/data20_1.js',
+            'data371/data20_2.js',
+            'data371/data20_3.js',
+            'data371/data21_1.js',
+            'data371/data21_2.js',
+            'data371/data21_3.js',
+            'data371/data21_4.js',
+            'data371/data22_1.js',
+            'data371/data22_2.js',
+            'data371/data22_3.js',
+            'data371/data22_4.js',
+            'data371/data23_2.js',
+            'js/services/course-data.js',
+            'js/controllers/feedback.js',
+            'js/controllers/home.js',
+            'js/controllers/problem.js',
+            'js/controllers/problem-set-list.js',
+            'js/controllers/unit-list.js',
+            'js/directives/ms-add-decimals.js',
+            'js/directives/ms-add-cash-zeros.js',
+            'js/directives/ms-add-wholes.js',
+            'js/directives/ms-add-zero.js',
+            'js/directives/ms-breadcrumbs.js',
+            'js/directives/ms-build-equivalent-fraction.js',
+            'js/directives/ms-btn.js',
+            'js/directives/ms-btn-grp.js',
+            'js/directives/ms-button.js',
+            'js/directives/ms-button-group.js',
+            'js/directives/ms-cancel-btn.js',
+            'js/directives/ms-cancel-element.js',
+            'js/directives/ms-cancel-fracs.js',
+            'js/directives/ms-cancel-fractions.js',
+            'js/directives/ms-chart.js',
+            'js/directives/ms-checkbox.js',
+            'js/directives/ms-checkboxlabel.js',
+            'js/directives/ms-chkbtn.js',
+            'js/directives/ms-choose.js',
+            'js/directives/ms-col.js',
+            'js/directives/ms-commas-number.js',
+            'js/directives/ms-comparewholesgraph.js',
+            'js/directives/ms-controls.js',
+            'js/directives/ms-css.js',
+            'js/directives/ms-cut.js',
+            'js/directives/ms-data-set.js',
+            'js/directives/ms-div-wholes.js',
+            'js/directives/ms-divide-decimals-power-ten.js',
+            'js/directives/ms-equivalent.js',
+            'js/directives/ms-event-label.js',
+            'js/directives/ms-exponent.js',
+            'js/directives/ms-expression.js',
+            'js/directives/ms-feedback.js',
+            'js/directives/ms-find-lcm.js',
+            'js/directives/ms-fraction.js',
+            'js/directives/ms-fraction-boxes.js',
+            'js/directives/ms-fraction-string.js',
+            'js/directives/ms-graph.js',
+            'js/directives/ms-graph-horizontal.js',
+            'js/directives/ms-group.js',
+            'js/directives/ms-help-prompt.js',
+            'js/directives/ms-html.js',
+            'js/directives/ms-image.js',
+            'js/directives/ms-input.js',
+            'js/directives/ms-input-cash.js',
+            'js/directives/ms-instruction.js',
+            'js/directives/ms-long-division.js',
+            'js/directives/ms-long-division-decimal.js',
+            'js/directives/ms-mixed-number.js',
+            'js/directives/ms-modal.js',
+            'js/directives/ms-multiply-decimals.js',
+            'js/directives/ms-multiply-decimals-power-ten.js',
+            'js/directives/ms-multiply-fractions.js',
+            'js/directives/ms-multiply-wholes.js',
+            'js/directives/ms-order-operations.js',
+            'js/directives/ms-order-operations-simple.js',
+            'js/directives/ms-pan.js',
+            'js/directives/ms-panel.js',
+            'js/directives/ms-panel-group.js',
+            'js/directives/ms-percent-arrows.js',
+            'js/directives/ms-placevalue.js',
+            'js/directives/ms-previous.js',
+            'js/directives/ms-prime-factorization.js',
+            'js/directives/ms-problem.js',
+            'js/directives/ms-problem-pager.js',
+            'js/directives/ms-reduce-fraction.js',
+            'js/directives/ms-remove-plus.js',
+            'js/directives/ms-row.js',
+            'js/directives/ms-row-group.js',
+            'js/directives/ms-select.js',
+            'js/directives/ms-showplace.js',
+            'js/directives/ms-showplacedecimal.js',
+            'js/directives/ms-sign.js',
+            'js/directives/ms-size.js',
+            'js/directives/ms-string.js',
+            'js/directives/ms-strip-commas.js',
+            'js/directives/ms-subtract-decimals.js',
+            'js/directives/ms-subtract-wholes.js',
+            'js/directives/ms-to-lowercase.js',
+            'js/directives/ms-wb.js',
+            'js/directives/ms-whole-part.js',
+            'js/filters/add-decimals.js',
+            'js/filters/add-wholes.js',
+            'js/filters/change-signs.js',
+            'js/filters/checkbox2lbl.js',
+            'js/filters/commas.js',
+            'js/filters/decimal-to-display-array.js',
+            'js/filters/digits.js',
+            'js/filters/divide-decimals.js',
+            'js/filters/hide-last.js',
+            'js/filters/multiply-decimals.js',
+            'js/filters/multiply-wholes.js',
+            'js/filters/percent-conversion.js',
+            'js/filters/replace.js',
+            'js/filters/stylecharacter.js',
+            'js/filters/subtract-decimals.js',
+            'js/filters/subtract-wholes.js',
+            'js/filters/wrap.js',
+            'js/services/data-utils.js',
+            'js/services/directive-utils.js',
+            'js/services/expression.js',
+            'js/services/feedback-data.js',
+            'js/services/number-utils.js',
+            'js/services/panel-group-data.js',
+            'js/services/parser.js',
+            'js/services/problem-data.js'
+        ], function() {
+          // when all is done, execute bootstrap angular application
+          //debugger;
+          angular.bootstrap(document, ['mathSkills']);
+        })
+      </script>
     </head>
     <body class=clskls371>
         <header class=container>
