--- a/app/index371.html
+++ b/app/index371.html
@@ -34,10 +34,10 @@
     // load all of the dependencies asynchronously.
         //if you add a service or directive below, include it in the index372 file as well
         $script([
-            //'lib/angular/angular.js',
-            //'lib/jquery/jquery.1.11.0.min.js',
+            'lib/angular/angular.js',
+            //'lib/jquery/jquery.1.9.1.min.js',
+			//'//ajax.googleapis.com/ajax/libs/angularjs/1.2.12/angular.min.js',
 			'//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js',
-        	'//ajax.googleapis.com/ajax/libs/angularjs/1.2.12/angular.min.js',
             'lib/bootstrap/bootstrap.min.js',
             'lib/flot/jquery.flot.js',
             'lib/flot/jquery.flot.categories.js',
@@ -248,198 +248,5 @@
             <ms-modal></ms-modal>
             <div ng-view></div>
         </div>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script src=lib/angular/angular.js></script>
-        <script src=lib/bootstrap/bootstrap.min.js></script>
-        <script src=lib/flot/jquery.flot.js></script>
-        <script src=lib/flot/jquery.flot.categories.js></script>
-        <script src=js/mathSkills.js></script>
-        <script src=js/services/mathSkills.services.js></script>
-        <script src=data371/data1_1.js></script>
-        <script src=data371/data1_2.js></script>
-        <script src=data371/data1_3.js></script>
-        <script src=data371/data1_4.js></script>
-        <script src=data371/data1_5.js></script>
-        <script src=data371/data2_1.js></script>
-        <script src=data371/data2A_1.js></script>
-        <script src=data371/data2A_2.js></script>
-        <script src=data371/data3_1.js></script>
-        <script src=data371/data3_2.js></script>
-        <script src=data371/data4_1.js></script>
-        <script src=data371/data4_2.js></script>
-        <script src=data371/data5_1.js></script>
-        <script src=data371/data5_2.js></script>
-        <script src=data371/data5_3.js></script>
-        <script src=data371/data5_4.js></script>
-        <script src=data371/data6_1.js></script>
-        <script src=data371/data6_2.js></script>
-        <script src=data371/data6_3.js></script>
-        <script src=data371/data6_4.js></script>
-        <script src=data371/data7_1.js></script>
-        <script src=data371/data7_2.js></script>
-        <script src=data371/data7_3.js></script>
-        <script src=data371/data7_4.js></script>
-        <script src=data371/data8_1.js></script>
-        <script src=data371/data8_2.js></script>
-        <script src=data371/data8_3.js></script>
-        <script src=data371/data8_4.js></script>
-        <script src=data371/data8_5.js></script>
-        <script src=data371/data9_1.js></script>
-        <script src=data371/data9_2.js></script>
-        <script src=data371/data9_3.js></script>
-        <script src=data371/data10_1.js></script>
-        <script src=data371/data10_2.js></script>
-        <script src=data371/data10_3.js></script>
-		<script src=data371/data10_4.js></script>
-        <script src=data371/data11_1.js></script>
-        <script src=data371/data12_1.js></script>
-        <script src=data371/data12_2.js></script>
-        <script src=data371/data12_3.js></script>
-        <script src=data371/data13_1.js></script>
-        <script src=data371/data13_2.js></script>
-        <script src=data371/data14_1.js></script>
-        <script src=data371/data14_2.js></script>
-        <script src=data371/data15_1.js></script>
-        <script src=data371/data15_2.js></script>
-        <script src=data371/data15_3.js></script>
-        <script src=data371/data16_1.js></script>
-        <script src=data371/data16_2.js></script>
-        <script src=data371/data16_3.js></script>
-        <script src=data371/data16_4.js></script>
-        <script src=data371/data17_1.js></script>
-        <script src=data371/data17_2.js></script>
-        <script src=data371/data18_1.js></script>
-        <script src=data371/data18_2.js></script>
-        <script src=data371/data18_3.js></script>
-        <script src=data371/data19_1.js></script>
-        <script src=data371/data19_2.js></script>
-        <script src=data371/data19_3.js></script>
-        <script src=data371/data19_4.js></script>
-        <script src=data371/data20_1.js></script>
-        <script src=data371/data20_2.js></script>
-        <script src=data371/data20_3.js></script>
-        <script src=data371/data21_1.js></script>
-        <script src=data371/data21_2.js></script>
-        <script src=data371/data21_3.js></script>
-        <script src=data371/data21_4.js></script>
-        <script src=data371/data22_1.js></script>
-        <script src=data371/data22_2.js></script>
-        <script src=data371/data22_3.js></script>
-        <script src=data371/data22_4.js></script>
-        <script src=data371/data23_2.js></script>
-         <script src=js/services/course-data.js></script>
-         <!-- if you add a service or directive below, include it in the index372 file as well-->
-        <script src=js/controllers/feedback.js></script>
-        <script src=js/controllers/home.js></script>
-        <script src=js/controllers/problem.js></script>
-        <script src=js/controllers/problem-set-list.js></script>
-        <script src=js/controllers/unit-list.js></script>
-        <script src=js/directives/ms-add-decimals.js></script>
-        <script src=js/directives/ms-add-cash-zeros.js></script>
-        <script src=js/directives/ms-add-wholes.js></script>
-        <script src=js/directives/ms-add-zero.js></script>
-        <script src=js/directives/ms-breadcrumbs.js></script>
-        <script src=js/directives/ms-build-equivalent-fraction.js></script>
-        <script src=js/directives/ms-btn.js></script>
-        <script src=js/directives/ms-btn-grp.js></script>
-        <script src=js/directives/ms-button.js></script>
-        <script src=js/directives/ms-button-group.js></script>
-        <script src=js/directives/ms-cancel-btn.js></script>
-        <script src=js/directives/ms-cancel-element.js></script>
-        <script src=js/directives/ms-cancel-fracs.js></script>
-        <script src=js/directives/ms-cancel-fractions.js></script>
-        <script src=js/directives/ms-chart.js></script>
-        <script src=js/directives/ms-checkbox.js></script>
-        <script src=js/directives/ms-checkboxlabel.js></script>
-        <script src=js/directives/ms-chkbtn.js></script>
-        <script src=js/directives/ms-choose.js></script>
-        <script src=js/directives/ms-col.js></script>
-        <script src=js/directives/ms-commas-number.js></script>
-        <script src=js/directives/ms-comparewholesgraph.js></script>
-        <script src=js/directives/ms-controls.js></script>
-        <script src=js/directives/ms-css.js></script>
-        <script src=js/directives/ms-cut.js></script>
-        <script src=js/directives/ms-data-set.js></script>
-        <script src=js/directives/ms-div-wholes.js></script>
-        <script src=js/directives/ms-divide-decimals-power-ten.js></script>
-        <script src=js/directives/ms-equivalent.js></script>
-        <script src=js/directives/ms-event-label.js></script>
-        <script src=js/directives/ms-exponent.js></script>
-        <script src=js/directives/ms-expression.js></script>
-        <script src=js/directives/ms-feedback.js></script>
-        <script src=js/directives/ms-find-lcm.js></script>
-        <script src=js/directives/ms-fraction.js></script>
-        <script src=js/directives/ms-fraction-boxes.js></script>
-        <script src=js/directives/ms-fraction-string.js></script>
-        <script src=js/directives/ms-graph.js></script>
-        <script src=js/directives/ms-graph-horizontal.js></script>
-        <script src=js/directives/ms-group.js></script>
-        <script src=js/directives/ms-help-prompt.js></script>
-        <script src=js/directives/ms-html.js></script>
-        <script src=js/directives/ms-image.js></script>
-        <script src=js/directives/ms-input.js></script>
-        <script src=js/directives/ms-input-cash.js></script>
-        <script src=js/directives/ms-instruction.js></script>
-        <script src=js/directives/ms-long-division.js></script>
-        <script src=js/directives/ms-long-division-decimal.js></script>
-        <script src=js/directives/ms-mixed-number.js></script>
-        <script src=js/directives/ms-modal.js></script>
-        <script src=js/directives/ms-multiply-decimals.js></script>
-        <script src=js/directives/ms-multiply-decimals-power-ten.js></script>
-        <script src=js/directives/ms-multiply-fractions.js></script>
-        <script src=js/directives/ms-multiply-wholes.js></script>
-        <script src=js/directives/ms-numberline.js></script>
-        <script src=js/directives/ms-order-operations.js></script>
-        <script src=js/directives/ms-order-operations-simple.js></script>
-        <script src=js/directives/ms-pan.js></script>
-        <script src=js/directives/ms-panel.js></script>
-        <script src=js/directives/ms-panel-group.js></script>
-        <script src=js/directives/ms-percent-arrows.js></script>
-        <script src=js/directives/ms-placevalue.js></script>
-        <script src=js/directives/ms-previous.js></script>
-        <script src=js/directives/ms-prime-factorization.js></script>
-        <script src=js/directives/ms-problem.js></script>
-        <script src=js/directives/ms-problem-pager.js></script>
-        <script src=js/directives/ms-reduce-fraction.js></script>
-        <script src=js/directives/ms-remove-plus.js></script>
-        <script src=js/directives/ms-row.js></script>
-        <script src=js/directives/ms-row-group.js></script>
-        <script src=js/directives/ms-select.js></script>
-        <script src=js/directives/ms-showplace.js></script>
-        <script src=js/directives/ms-showplacedecimal.js></script>
-        <script src=js/directives/ms-sign.js></script>
-        <script src=js/directives/ms-size.js></script>
-        <script src=js/directives/ms-string.js></script>
-        <script src=js/directives/ms-strip-commas.js></script>
-        <script src=js/directives/ms-subtract-decimals.js></script>
-        <script src=js/directives/ms-subtract-wholes.js></script>
-        <script src=js/directives/ms-to-lowercase.js></script>
-        <script src=js/directives/ms-wb.js></script>
-        <script src=js/directives/ms-whole-part.js></script>
-        <script src=js/filters/add-decimals.js></script>
-        <script src=js/filters/add-wholes.js></script>
-        <script src=js/filters/change-signs.js></script>
-        <script src=js/filters/checkbox2lbl.js></script>
-        <script src=js/filters/commas.js></script>
-        <script src=js/filters/decimal-to-display-array.js></script>
-        <script src=js/filters/digits.js></script>
-        <script src=js/filters/divide-decimals.js></script>
-        <script src=js/filters/hide-last.js></script>
-        <script src=js/filters/multiply-decimals.js></script>
-        <script src=js/filters/multiply-wholes.js></script>
-        <script src=js/filters/percent-conversion.js></script>
-        <script src=js/filters/replace.js></script>
-        <script src=js/filters/stylecharacter.js></script>
-        <script src=js/filters/subtract-decimals.js></script>
-        <script src=js/filters/subtract-wholes.js></script>
-        <script src=js/filters/wrap.js></script>
-        <script src=js/services/data-utils.js></script>
-        <script src=js/services/directive-utils.js></script>
-        <script src=js/services/expression.js></script>
-        <script src=js/services/feedback-data.js></script>
-        <script src=js/services/number-utils.js></script>
-        <script src=js/services/panel-group-data.js></script>
-        <script src=js/services/parser.js></script>
-        <script src=js/services/problem-data.js></script>
     </body>
 </html>
