--- a/app/index372.html
+++ b/app/index372.html
@@ -140,6 +140,7 @@
 			'js/directives/ms-expression.js',
 			'js/directives/ms-feedback.js',
 			'js/directives/ms-find-lcm.js',
+			'js/directives/ms-find-lcm-test.js',
 			'js/directives/ms-fraction.js',
 			'js/directives/ms-fraction-boxes.js',
 			'js/directives/ms-fraction-string.js',
