move jquery.flot.js prior to loader

--- a/app/index371.html
+++ b/app/index371.html
@@ -9,7 +9,8 @@
         <link rel=stylesheet href=css/bootstrap.min.css>
         <link rel=stylesheet href=css/app.css>
 
-<script src=lib/jquery/jquery-1.11.0.min.js></script>         
+<script src=lib/jquery/jquery-1.11.0.min.js></script> 
+<script src=lib/flot/jquery.flot.js></script>       
 <script>
     
 /*
@@ -36,10 +37,7 @@
         //if you add a service or directive below, include it in the index372 file as well
         $script([
             'lib/angular/angular.js',
-            //'lib/jquery/jquery.1.9.1.min.js',
-			//'//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js',
             'lib/bootstrap/bootstrap.min.js',
-            'lib/flot/jquery.flot.js',
             'lib/flot/jquery.flot.categories.js',
             'js/mathSkills.js',
             'js/services/mathSkills.services.js',
