--- a/app/index372.html
+++ b/app/index372.html
@@ -9,7 +9,8 @@
         <link rel=stylesheet href=css/bootstrap.min.css>
         <link rel=stylesheet href=css/app.css>
 
-<script src=lib/jquery/jquery-1.11.0.min.js></script>          
+<script src=lib/jquery/jquery-1.11.0.min.js></script> 
+<script src=lib/flot/jquery.flot.js></script>              
 <script>
     
 /*
@@ -36,11 +37,8 @@
         //if you add a service or directive below, include it in the index371 file as well
         $script([
             'lib/angular/angular.js',
-            //'lib/jquery/jquery.1.9.1.min.js',
-			//'//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js',
             'lib/jquery-ui/jquery-ui-1.10.4.custom/js/jquery-ui-1.10.4.custom.min.js',
 			'lib/bootstrap/bootstrap.min.js',
-			'lib/flot/jquery.flot.js',
 			'lib/flot/jquery.flot.categories.js',
 			'js/mathSkills.js',
 			'js/services/mathSkills.services.js',
