--- a/app/index371.html
+++ b/app/index371.html
@@ -75,6 +75,7 @@ value:a("$provide","value"),constant:a("$provide","constant","unshift"),filter:a
             'data371/data10_2.js',
             'data371/data10_3.js',
             'data371/data10_4.js',
+			'data371/data10_5.js',
             'data371/data11_1.js',
             'data371/data12_1.js',
             'data371/data12_2.js',
