ms-find-gcf.js, ms-find-gcf.html, c2.js are all created

--- a/app/index372.html
+++ b/app/index372.html
@@ -136,6 +136,7 @@ value:a("$provide","value"),constant:a("$provide","constant","unshift"),filter:a
 			'js/directives/ms-expression.js',
 			'js/directives/ms-feedback.js',
 			'js/directives/ms-find-lcm.js',
+			'js/directives/ms-find-gcf.js',
 			'js/directives/ms-fraction.js',
 			'js/directives/ms-fraction-boxes.js',
 			'js/directives/ms-fraction-string.js',
