--- a/app/index372.html
+++ b/app/index372.html
@@ -142,6 +142,7 @@ value:a("$provide","value"),constant:a("$provide","constant","unshift"),filter:a
 			'js/directives/ms-fraction-string.js',
 			'js/directives/ms-graph.js',
 			'js/directives/ms-graph-horizontal.js',
+			'js/directives/ms-graph-numberline.js',
 			'js/directives/ms-group.js',
 			'js/directives/ms-help-prompt.js',
 			'js/directives/ms-html.js',
