--- a/app/index372.html
+++ b/app/index372.html
@@ -8,6 +8,7 @@
         <link href=//fonts.googleapis.com/css?family=Muli:300,400 rel='stylesheet' type='text/css'>
         <link rel=stylesheet href=css/bootstrap.min.css>
         <link rel=stylesheet href=css/app.css>
+        <link href="http://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css" />
 
 <script src=lib/jquery/jquery-1.11.0.min.js></script> 
 <script src=lib/flot/jquery.flot.js></script>              
