--- a/app/index371.html
+++ b/app/index371.html
@@ -113,6 +113,7 @@ value:a("$provide","value"),constant:a("$provide","constant","unshift"),filter:a
             'data371/data22_3.js',
             'data371/data22_4.js',
             'data371/data23_1.js',
+			'data371/data23_2.js',
             'js/services/course-data.js',
             'js/controllers/feedback.js',
             'js/controllers/home.js',
