Created enlarge-ops filter and applied to ms-fraction-sring.js

--- a/app/index372.html
+++ b/app/index372.html
@@ -195,6 +195,7 @@ value:a("$provide","value"),constant:a("$provide","constant","unshift"),filter:a
 			'js/filters/decimal-to-display-array.js',
 			'js/filters/digits.js',
 			'js/filters/divide-decimals.js',
+			'js/filters/enlarge-ops.js',
 			'js/filters/hide-last.js',
 			'js/filters/multiply-decimals.js',
 			'js/filters/multiply-wholes.js',
