--- a/app/index371.html
+++ b/app/index371.html
@@ -5,7 +5,7 @@
         <meta charset=utf-8>
         <meta name=viewport content="width=device-width, initial-scale=1.0">
         <title>College Skills 371 | General Arithmetic | Santa Rosa Junior College</title>
-        <link href=//fonts.googleapis.com/css?family=Muli:300,400 rel='stylesheet' type='text/css'>
+        <!--<link href=//fonts.googleapis.com/css?family=Muli:300,400 rel='stylesheet' type='text/css'>-->
         <link rel=stylesheet href=css/bootstrap.min.css>
         <link rel=stylesheet href=css/app.css>
         <link rel=stylesheet href=lib/jquery-ui/jquery-ui-1.10.4.custom/css/smoothness/jquery-ui.css>
@@ -114,6 +114,7 @@ value:a("$provide","value"),constant:a("$provide","constant","unshift"),filter:a
             'data371/data22_4.js',
             'data371/data23_1.js',
 			'data371/data23_2.js',
+			'data371/data25_1.js',
             'js/services/course-data.js',
             'js/controllers/feedback.js',
             'js/controllers/home.js',
