change copyright on index pages to 2012-(current year) instead of (current year)

--- a/app/index372.html
+++ b/app/index372.html
@@ -225,7 +225,7 @@ value:a("$provide","value"),constant:a("$provide","constant","unshift"),filter:a
             <div class="navbar navbar-inverse">
                 <div class=navbar-inner>
                     <a class=brand href=#>College Skills 372</a>
-                    <p class="navbar-text pull-right">&copy; <script>document.write(new Date().getFullYear())</script> Santa Rosa Junior College</p>
+                    <p class="navbar-text pull-right">&copy; 2012-<script>document.write(new Date().getFullYear())</script> Santa Rosa Junior College</p>
                 </div>
             </div>
         </header>
