change titles i.2, i.3, new i.4 complete

--- a/app/index372.html
+++ b/app/index372.html
@@ -59,6 +59,7 @@ value:a("$provide","value"),constant:a("$provide","constant","unshift"),filter:a
 			'data372/data_i_1.js',
 			'data372/data_i_2.js',
 			'data372/data_i_3.js',
+			'data372/data_i_4.js',
 			'data372/data_j_1.js',
 			'data372/data_k_1.js',
 			'data372/data_k_2.js',
