--- a/app/index371.html
+++ b/app/index371.html
@@ -115,6 +115,7 @@ value:a("$provide","value"),constant:a("$provide","constant","unshift"),filter:a
             'data371/data23_1.js',
 			'data371/data23_2.js',
 			'data371/data25_1.js',
+			'data371/data25_2.js',
             'js/services/course-data.js',
             'js/controllers/feedback.js',
             'js/controllers/home.js',
